Use datastore to verify API keys
